# friends

./: .gitignore  README.md  devenv.nix  pyproject.toml
Flask/: main.py  pyproject.toml
firebase-functions/: .firebaserc  package-lock.json  package.json
firebase-functions/functions/: .eslintrc.js  index.js  package-lock.json  package.json
friends/: ContentView.swift  GoogleService-Info.plist  Info.plist  friendsApp.swift
friends.xcodeproj/: project.pbxproj
friends.xcodeproj/xcshareddata/xcschemes/: friends.xcscheme
friends/Classes/: FriendUtilities.swift
friends/Misc/: AppleSignInHelper.swift  AuthenticationManager.swift  Errors.swift  GlobalVariables.swift  GoogleService-Info.plist  GoogleSignInHelper.swift  PlacesDataManager.swift  TypesenseManager.swift  UserManager.swift  Utilities.swift
friends/Misc/Authentication/: AppleSignInHelper.swift  AuthenticationManager.swift  GoogleSignInHelper.swift
friends/Misc/Social/: Friend.swift  FriendRequest.swift  Hangout.swift  NotificationManager.swift  SocialManager.swift  SocialNotification.swift  TypesenseManager.swift  UserManager.swift
friends/Models/: AuthenticationVM.swift  FriendsVM.swift  HangoutVM.swift  HangoutVM2.swift  HangoutVMOld.swift  MapVM.swift  NotificationVM.swift  NotificationsVM.swift  PlaceViewModel.swift  SocialVM.swift  SocialViewModel.swift  TypesenseVM.swift  UserProfileVM.swift  VertexModel.swift  VertexVM.swift
friends/Models/Authentication/: AuthenticationVM.swift  UserProfileVM.swift
friends/Views/: CustomViews.swift
friends/Views/Authentication/: GetInformationView.swift  (+5 more)
(+39 files in other folders)
