[tool.poetry]
name = "friends"
version = "0.1.0"
description = ""
authors = ["Bryan Hoang <bryan303.co@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restful = "^0.3.10"
black = "^24.8.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
